Copyright (c) 2007 Infrae. All rights reserved.
See also LICENSE.txt

Meta::
  
  Valid for:        SilvaForum 1.0 beta (SVN/Unreleased)
  Author:           Todd Matsumoto, Guido Wesdorp
  Email:            todd@infrae.com
  Last author:      $Author: guido $
  SVN Revision:     $Date: 2007-08-20 23:24:20 +0200 (Mon, 20 Aug 2007) $
  Last modified:    $Rev: 25523 $

HISTORY
=======

1.0 beta
--------------------------

* Added support for emoticons.

* Added nice date/time formatting.

* Several layout fixes.

* Small code fixes and cleanups (see individual checkin messages for
  API changes).

* Added preview button functionality.

* Added javascript to hide the form, however this isn't implemented yet.

* Added Several layout styles.

* Added pagination, and sorted list orders newest to oldest.

* Workout out a solution to authoring issue in the SMI.