@@ -7,14 +7,14 @@
     <script type="text/javascript">
     // <![CDATA[
     function add_smiley(text_to_add) {
-        /* add a smiley to the textarea
+        /* add a smiley to the topic
         */
         // XXX this is a bit scary... the DOM specs say text nodes can
         // be split up, but afaik that never happens in browsers... if,
         // however, people start reporting missing last bits of text, please
         // fix this code... ;)
-        var textarea = document.getElementById('text');
-        var content = textarea.value;
+        var topic = document.getElementById('topic');
+        var content = topic.value;
         var lastchar = content.charAt(content.length - 1);
         if (lastchar && lastchar != ' ' && lastchar != '\t' && lastchar != '\n'
               && lastchar != '\r') {
@@ -22,9 +22,8 @@
         };
         content += text_to_add + ' ';
         // XXX please check the argument order here! might be wrong...
-        // stupid DOM :(
-        textarea.value = content;
-        textarea.focus();
+        topic.value = content;
+        topic.focus();
     };
 
     // ]]>
@@ -43,17 +42,11 @@
         <input class="store"
           type="text"
           name="topic"
+          id="topic"
           size="80"
           tal:attributes="value request/topic | nothing"
         />
       </div>
-      <h5>Messsage</h5>
-      <textarea class="store"
-        name="text"
-        id="text"
-        rows="10"
-        cols="68"
-        tal:content="python:request.get('text')"></textarea>
       <div id="emoticons">
         <div class="emoticon" tal:repeat="smileydata view/get_smiley_data">
           <img onclick="add_smiley(this.title)"
